unpackaged/main/default/objects/Account/fields/Delete_me_after__c.field-meta.xml
<CustomField>
    <fullName>Delete_me_after__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete me after</label>
    <type>Checkbox</type>
</CustomField>