unpackaged/main/default/objects/Account/fields/Demo_Box__c.field-meta.xml
<CustomField>
    <fullName>Demo_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Box</label>
    <type>Checkbox</type>
</CustomField>