unpackaged/main/default/objects/Account/fields/Demo_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Demo_Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Check Box</label>
    <type>Checkbox</type>
</CustomField>