unpackaged/main/default/objects/Account/fields/Demo_prep__c.field-meta.xml
<CustomField>
    <fullName>Demo_prep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo prep</label>
    <type>Checkbox</type>
</CustomField>