unpackaged/main/default/objects/Account/fields/Jess_Tick_Box__c.field-meta.xml
<CustomField>
    <fullName>Jess_Tick_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jess Tick Box</label>
    <type>Checkbox</type>
</CustomField>