unpackaged/main/default/objects/Account/fields/New_Tick_Box__c.field-meta.xml
<CustomField>
    <fullName>New_Tick_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Tick Box</label>
    <type>Checkbox</type>
</CustomField>