unpackaged/main/default/objects/Account/fields/tickbox__c.field-meta.xml
<CustomField>
    <fullName>tickbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tickbox</label>
    <type>Checkbox</type>
</CustomField>