unpackaged/main/default/objects/Account/fields/Top10Customer__c.field-meta.xml
<CustomField>
    <fullName>Top10Customer__c</fullName>
    <description>This is my new sales demo field</description>
    <label>Top 10 Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>