unpackaged/main/default/objects/Account/fields/Top_20__c.field-meta.xml
<CustomField>
    <fullName>Top_20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 20</label>
    <type>Checkbox</type>
</CustomField>